--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ description:         Please see the README on Github at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- containers >= 0.5.10.2
 
 library:
   source-dirs: src
